--- a/rest-js-samples/sql-query-and-demographics.html
+++ b/rest-js-samples/sql-query-and-demographics.html
@@ -58,7 +58,7 @@
     </select>
     <script>
 
-      const apiKey = "AAPK9be46189cbd44153968e158ad2a6c87c7ZWw1yXvBZ7WtLtXoMXNEhj8FzgbD6Etk4a3BLKqv0V3yNyCnDN79kYgerZzIFO3"
+      const apiKey = "YOUR_API_KEY"
 ;
 
       const map = new ol.Map({
